--- a/src/Components/Form/Form.module.css
+++ b/src/Components/Form/Form.module.css
@@ -1,6 +1,7 @@
 .title {
-  text-align: end;
-  padding: 0 6rem;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
   margin: 0;
 }
 
@@ -51,40 +52,13 @@ img {
   }
 }
 
-input[type='reset'],
-input[type='submit'] {
-  z-index: 10;
-  color: #282c34;
-  font-size: 2rem;
-  border-radius: 5px;
-  background-color: #61dafb;
-  margin-top: 15px;
-  cursor: pointer;
-  border: none;
-  width: 25rem;
-  box-shadow: inset 0 20px 4px -19px rgba(255, 255, 255, 0.4),
-    0 6px 8px 0 rgba(0, 0, 0, 0.3);
-}
-
-input[type='reset'] {
-  background-color: #fc929e;
-  margin-bottom: 15px;
-}
-
-input[type='reset']:active,
-input[type='submit']:active {
-  transform: scale(0.95);
-  box-shadow: none;
-}
-
-input[type='reset']:hover,
-input[type='submit']:hover {
-  filter: brightness(125%);
-}
-
 .inputFields {
   display: grid;
   grid-template-columns: 15.5rem 15.5rem;
   grid-template-rows: 5rem 5rem 5rem;
   grid-gap: 10px;
+}
+
+.header {
+  color: #61dafb;
 }
